# MagicSetEditor

./: .gitignore  MakeAM.sh  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
misc/: FindHunspell.cmake
src/: CMakeLists.txt  config.h.in  main.cpp
src/cli/: cli_main.cpp  text_io_handler.cpp  win32_cli_wrapper.cpp
src/data/: card.cpp  card.hpp  filter.hpp  installer.cpp  keyword.cpp  locale.cpp  set.cpp  settings.cpp  stylesheet.cpp  stylesheet.hpp  symbol.cpp  symbol_font.cpp
src/data/action/: keyword.cpp  set.cpp  symbol.cpp  symbol_part.cpp  value.cpp
src/data/field/: choice.hpp  multiple_choice.cpp
src/data/format/: apprentice.cpp  clipboard.cpp  image.cpp  mse1.cpp  mse2.cpp  mtg_editor.cpp  mws.cpp
src/gfx/: color.cpp
src/gui/: auto_replace_window.cpp  card_select_window.cpp  drop_down_list.cpp  html_export_window.cpp  image_slice_window.cpp  images_export_window.cpp  packages_window.cpp  preferences_window.cpp  print_window.cpp  thumbnail_thread.cpp  update_checker.cpp  util.cpp  welcome_window.cpp
src/gui/control/: card_list.cpp  card_list.hpp  card_list_column_select.cpp  card_viewer.cpp  card_viewer.hpp  filter_ctrl.cpp  graph.cpp  keyword_list.cpp  keyword_list.hpp  native_look_editor.cpp
src/gui/set/: cards_panel.cpp  console_panel.cpp  keywords_panel.cpp  random_pack_panel.cpp  window.cpp
src/gui/symbol/: window.cpp
src/gui/value/: choice.cpp  image.cpp  text.cpp
src/render/symbol/: viewer.cpp  viewer.hpp
src/render/text/: element.cpp  font.cpp  viewer.cpp
src/script/: to_value.hpp  value.cpp
src/script/functions/: basic.cpp  construction.cpp  editor.cpp  english.cpp  export.cpp  regex.cpp
src/util/: atomic.hpp  error.cpp  error.hpp  file_utils.cpp  find_replace.hpp  locale.hpp  regex.cpp  regex.hpp  smart_ptr.hpp  spec_sort.cpp  spell_checker.cpp  spell_checker.hpp  string.cpp  string.hpp  tagged_string.cpp
src/util/io/: package.cpp  package.hpp  package_manager.hpp  reader.cpp  reader.hpp  writer.hpp
tools/linux-installer/: README
